--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -1,7 +1,7 @@
 @import "../../utils/utils";
 
 .team {
-  // overflow: hidden;
+  overflow: hidden;
   // margin-right: ;
   margin-bottom: 200px;
 
@@ -66,7 +66,7 @@
     }
 
     & span {
-      font-weight: 800;
+      font-weight: 600;
     }
   }
 
